--- a/source/assets/stylesheets/pages/_home.scss
+++ b/source/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,2 @@
 // Specific CSS for your home-page
-body {
-  background-image: url(../images/starwarsbg.jpeg);
-}
+
